--- a/app/css/popup.css
+++ b/app/css/popup.css
@@ -1,7 +1,28 @@
 body, html {
   background: #f9f9f9;
-  height: 500px;
-  padding: 40px;
+  height: 300px;
   overflow: hidden;
-  width: 500px;
+  width: 300px;
+}
+
+
+h1, h2 {
+	font-weight: lighter;
+	text-align: center;
+}
+
+h1 {
+	font-size: 40px;
+}
+
+h1 span {
+	font-weight: bold;
+}
+
+select {
+	max-width: 90%;
+	margin:auto;
+	position: absolute;
+	bottom: 20px;
+	left: 5%;
 }
